Feature [BS-1]: implemenatacion de los ambientes

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
-#global
-PORT=8000
-CONNECTION_STRING=your_connection_string_global
-
-#local
-CONNECTION_STRING_LOCAL=your_connection_string_local
+PORT=port
+CONNECTION_STRING=your_connection_string
